 - Fixed Dillo and its dpis to work from "/tmp" (for easy device unmount).
 - Simplified http.c by reusing the new non-blocking writes in IO.
 - Reworked the capi API so cache is only accessable from capi.
 - Rewrote the CCC's OpAbort handling.
 - Rewrote the DNS API and the Dpid start code inside Dillo.
 - Implemented Stop button to not only stop rendering but also networking.
   Patches: Jorge Arellano
+- Connected signals to <li> elements (fixes links within lists).
 - Enabled text, background-color and geometry in preferences.
 - Enabled clicking over image links.
 - Improved notification upon leaving links.
 - Implemented image-link URL showing in status bar.
   Patches: place
+- Fixed a problem with locally-installed dpis.
   Patch: place, Jorge Arellano
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano, higuita
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
   Patches: Johannes Hofmann
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.
   Patches: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-2 [Aug 28, 2004]
 - * Added images to the current state of the redesign.
     - New module Imgbuf, see doc/Imgbuf.txt for details.
   Patch: Sebastian Geerken

        